--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Visualizing Global Marathon - Challenge 2</title>
-	<link rel="stylesheet" type="text/css" href="chal2.css" />
+	<link rel="stylesheet" type="text/css" href="vizmarathon.css" />
 	<script src="http://mbostock.github.com/d3/d3.v2.js"></script>
 	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>-->
   </head>
   <body>
-  		<script src="chal2-1.js"></script>
+  		<script src="vizmarathon.js"></script>
   </body>
 </html>
