--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>-->
   </head>
   <body>
+		<script src="map.js"></script>
   		<script src="vizmarathon.js"></script>
   </body>
 </html>
