--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 	<link rel="stylesheet" type="text/css" href="vizmarathon.css" />
 	<script src="http://mbostock.github.com/d3/d3.v2.js"></script>
 	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>-->
+    
+    <script type="text/javascript">
+    var isMap = document.location.hash != '#tree';
+    var isTree = !isMap;
+    </script>
+    
   </head>
   <body>
 		<script src="map.js"></script>
