the graph is now loaded with hash #tree

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
 		<script src="map.js"></script>
+        <script src="graph.js"></script>
   		<script src="vizmarathon.js"></script>
   </body>
 </html>
