bam, the graph is like... epic now

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
   </head>
   <body>
+      <a href="#tree" onclick="China();">china!</a>
 		<script src="map.js"></script>
         <script src="graph.js"></script>
   		<script src="vizmarathon.js"></script>
