added internationalButton en Map aan Graph button geplakt

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 		<script src="styling.js"></script>
 		<h1>Are all the countries in the world connected through air routes?</h1>
 		<div class="horizontal">
-			<button id="mapButton" onclick="buttonMap()"><span class="label">Map</span></a>
-			<button id="graphButton" onclick="buttonGraph()"><span class="label">Graph</span></a>
+			<button id="mapButton" class="button left" onclick="buttonMap()"><span class="label">Map</span></a>
+			<button id="graphButton" class="button right" onclick="buttonGraph()"><span class="label">Graph</span></a>
 			<button id="domesticButton" onclick="buttonDomestic()">Domestic flights</button>
+			<button id="internationalButton" onclick="buttonInternational()">International flights</button>
 		</div>
 		<br style="clear: both;" />
 		<script src="map.js"></script>
