--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <body onload="buttonMap()">
 		<script src="styling.js"></script>
 		<h1>Are all the countries in the world connected through air routes?</h1>
-		<div class="horizontal">
+		<!--<div class="horizontal">-->
 			<button id="mapButton" class="button left" onclick="buttonMap()"><span class="label">Map</span></a>
 			<button id="graphButton" class="button right" onclick="buttonGraph()"><span class="label">Graph</span></a>
-			<button id="domesticButton" onclick="buttonDomestic()">Domestic flights</button>
-			<button id="internationalButton" onclick="buttonInternational()">International flights</button>
-		</div>
+			<button id="domesticButton" class="button" onclick="buttonDomestic()"><span class="label">Domestic flights</span></button>
+			<button id="internationalButton" class="button" onclick="buttonInternational()"><span class="label">International flights</span></button>
+		<!--</div>-->
 		<br style="clear: both;" />
 		<script src="map.js"></script>
         <script src="graph.js"></script>
