Added story feature

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<script src="map.js"></script>
         <script src="graph.js"></script>
   		<script src="vizmarathon.js"></script>
+		<script src="story.js"></script>
 
 		
 		
