styling of buttons

--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
   </head>
   <body onload="buttonMap()">
 		<script src="styling.js"></script>
-		<h1>Are all the countries in the world connected through air routes?</h1>
+		<h1>Flight route connectivity of countries</h1>
 		<!--<div class="horizontal">-->
 			<button id="mapButton" class="button left" onclick="buttonMap()"><span class="label">Map</span></a>
-			<button id="graphButton" class="button right" onclick="buttonGraph()"><span class="label">Graph</span></a>
-			<button id="domesticButton" class="button" onclick="buttonDomestic()"><span class="label">Domestic flights</span></button>
-			<button id="internationalButton" class="button" onclick="buttonInternational()"><span class="label">International flights</span></button>
+			<button id="graphButton" class="button right" onclick="buttonGraph()"><span class="label">Graph</span></button>
+			<div class="horizontal">
+			</br>Overview maps:
+			</div>
+			<button id="allButton" class="button left" onclick="buttonAll()"><span class="label">All flights</span></a>
+			<button id="domesticButton" class="button middle" onclick="buttonDomestic()"><span class="label">Domestic flights</span></a>
+			<button id="internationalButton" class="button right" onclick="buttonInternational()"><span class="label">International flights</span></button>
 		<!--</div>-->
 		<br style="clear: both;" />
 		<script src="map.js"></script>
