fixed a bug in the map, where countries that had already been selected didn't turn grey upon hoover

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<button id="mapButton" class="button left" onclick="buttonMap()"><span class="label">Map</span></a>
 			<button id="graphButton" class="button right" onclick="buttonGraph()"><span class="label">Graph</span></button>
 			<div class="horizontal">
-			</br>Overview maps:
+			</br><span id="buttonLabel">Overview maps:</span>
 			</div>
 			<button id="allButton" class="button left" onclick="buttonAll()"><span class="label">All flights</span></a>
 			<button id="domesticButton" class="button middle" onclick="buttonDomestic()"><span class="label">Domestic flights</span></a>
